--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "nwidart/laravel-modules": "8.2",
         "predis/predis": "^1.1",
         "stevebauman/location": "^6.2",
-        "stripe/stripe-php": "^7.105"
+        "stripe/stripe-php": "^7.105",
+        "ext-json": "*"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
